Organized folder, limited plugin to 500 px for formatting.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <title>Hexed</title>
   <!-- jquery UI stuff -->
-  <link rel="stylesheet" href="jquery-ui.min.css">
-	<script src="external/jquery/jquery.js"></script>
-	<script src="jquery-ui.min.js"></script>
+  <link rel="stylesheet" href="jQueryUI/jquery-ui.min.css">
+	<script src="jQueryUI/external/jquery/jquery.js"></script>
+	<script src="jQueryUI/jquery-ui.min.js"></script>
 	<!-- my stuff -->
-  <script src="hexed.js"></script>
-  <link rel="stylesheet" href="hexed.css">
+  <script src="team2-hw2.js"></script>
+  <link rel="stylesheet" href="team2-hw2.css">
 </head>
 
 <body>
