--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<script src="jQueryUI/external/jquery/jquery.js"></script>
 	<script src="jQueryUI/jquery-ui.min.js"></script>
 	<!-- my stuff -->
-  <script src="team2-hw2.js"></script>
-  <link rel="stylesheet" href="team2-hw2.css">
+  <script src="resources/team2-hw2.js"></script>
+  <link rel="stylesheet" href="resources/team2-hw2.css">
 </head>
 
 <body>
